<resources>
    <string name="app_name">PetDay</string>
    <string name="tengo_una_mascota">Tengo una mascota</string>
    <string name="yo_ofrezco_servicios_para_mascotas">Yo ofrezco servicios para Mascotas</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="iniciar_sesion">Inicie sesión</string>
    <string name="entrar">Entrar</string>
    <string name="opciones_de_inicio">O continuar con</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="crear_cuenta">Si no tienes cuentas crea una <u>Aquí</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_fragment_register">Registro</string>
    <string name="correo_fragment_registro">Correo</string>
    <string name="nombre_de_usuario_fragment_resgistro">Nombre de usuario</string>
    <string name="telefono_fragment_registro">Teléfono</string>
    <string name="contrasena_fragment_registro">Contraseña</string>
    <string name="repetir_contrasena_fragment_registro">Repetir contraseña</string>
    <string name="boton_registro_fragment_registro">Registrarse</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="momentos_cuidador">Momentos</string>
    <string name="trabajos_cuidador">Trabajos</string>
    <string name="perfil_cuidador">Perfil</string>
    <string name="inicio_cuidador_fragment">Inicio</string>
    <string name="texto_logo_petday">PetDay</string>
    <string name="mascotas_fragment_texto">Mascotas</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="save">Guardar</string>
    <string name="banar_new_service">Bañar</string>
    <string name="cuidar_new_service">Cuidar</string>
    <string name="pasear_new_service">Pasear</string>
    <string name="gato_new_service">Gato</string>
    <string name="perro_new_service">Perro</string>
    <string name="pet_image_new_service">pet_image</string>
    <string name="tipo_de_servicio">Tipo de servicio</string>
    <string name="precio_new_service">Precio</string>
    <string name="descripcion_new_service">Descripción</string>
    <string name="agregar_foto_new_service">Agregar foto</string>
    <string name="tu_mascota_es_un_new_service">¿Tu mascota es un ?</string>
    <string name="solicitud_de_cuidado_de_gato">Solicitud de cuidado de gato</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="direcion">Dirección</string>
</resources>